# receipt-reader

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  docker-compose.yaml  pyproject.toml  tasks.py
.github/workflows/: python-app.yml
receipt_reader/: __main__.py  aggregator.py  categorizer.py  db.py  exception.py  parser.py  product.py  reader.py  translator.py
tests/: test_parser.py  test_reader.py
