[tool.poetry]
name = "receipt-reader"
version = "0.1.0"
description = ""
authors = ["Dawid Śmiech <dawid.smiech@schibsted.com>"]
readme = "README.md"
packages = [{include = "receipt_reader"}]

[tool.poetry.dependencies]
python = "^3.10"
tesseract = "^0.1.3"
pytesseract = "^0.3.10"
opencv-contrib-python = "^4.7.0.68"
opencv-python = "^4.7.0.68"
pymongo = "^4.3.3"
typer = "^0.7.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pylint = "^2.15.9"
pytest = "^7.2.0"
invoke = "^1.7.3"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
